<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/customColor">

    <Button
        android:id="@+id/distanceBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDistanceText"
        />

    <Button
        android:id="@+id/temperatureBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/distanceBtn"
        android:text="@string/btnTemperatureText"/>

    <Button
        android:id="@+id/speedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/temperatureBtn"
        android:text="@string/btnSpeedText"/>

    <Button
        android:id="@+id/weightBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/speedBtn"
        android:text="@string/btnWeightText"/>

</RelativeLayout>
