<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/customColor">

    <TextView
        android:id="@+id/titleKmph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvKmphToMph"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#FF0000"
        />

    <EditText
        android:id="@+id/et_KmphToMph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleKmph"
        android:hint="@string/etKmphValue"
        android:textColor="#000000"
        android:inputType="number"
        />

    <Button
        android:id="@+id/kmphConvertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_KmphToMph"
        android:layout_centerHorizontal="true"
        android:text="@string/btnConvertText"
        />

</RelativeLayout>