<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/customColor">

    <TextView
        android:id="@+id/titleDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_converter"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#FF0000"
        />

    <Spinner
        android:id="@+id/distanceSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleDistance"
        android:entries="@array/distance"/>

    <EditText
        android:id="@+id/et_Distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/distanceSpinner"
        android:hint="@string/string_enter_value"
        android:textColor="#000000"
        android:inputType="numberDecimal"
        />

    <TextView
        android:id="@+id/tv_toConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_Distance"
        android:text="@string/convert_to_string"
        android:layout_centerHorizontal="true"
        />

    <Spinner
        android:id="@+id/distanceSpinnerToConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_toConvert"
        android:entries="@array/distanceConvert"/>

    <Button
        android:id="@+id/distanceConvertBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/distanceSpinnerToConvert"
        android:layout_centerHorizontal="true"
        android:text="@string/btnConvertText"
        />

</RelativeLayout>